# AIE4

./: .gitignore  AI_Makerspace_FINAL_Unsloth_GRPO_Training.ipynb  AI_Makerspace_Unsloth_GRPO_Training.ipynb  AI_Makerspace_Unsloth_GRPO_Training2.ipynb  Another_copy_of_Fine_tuning_Embedding_Models_for_RAG_Assignment_Notebook4.ipynb  Fine_tuning_Embedding_Models_for_RAG_Assignment_Notebook.ipynb  Fine_tuning_Embedding_Models_for_RAG_Assignment_Notebook3.ipynb  Project_Ideas.md  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
Midterm/: Dockerfile  FineTuneEmbed.ipynb  FineTunePartTwo.ipynb  FineTuneSnowFlake.ipynb  MidtermChallenge copy.ipynb  MidtermChallenge.ipynb  WrittenReport.pages  app.py  chainlit.md  defaults.py  evaluateRAGAS.py  loadReferenceDocuments.py  readDataSets.py  requirements.txt  splitAndVectorize.py  test_dataset.jsonl  testset.csv  training_dataset.jsonl  val_dataset.jsonl
Miscellaneous/: Multi_Agent_RAG_LangGraph.ipynb  prompting_is_everything.ipynb
Project/: app.py  app2.py  app3.py
Week 1/Day 1/: Accessing_OpenAI_Like_a_Developer_AIMS_(Async_Assignment).ipynb  Address of GPTs
Week 1/Day 2/: Pythonic_RAG_Assignment.ipynb
Week 2/Day 2/: Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
Week 3/Day 1/: Introduction_to_LangGraph_Assignment_Version.ipynb
Week 3/Day 2/: Experiments.ipynb  Multi_Agent_RAG_LangGraph.ipynb  (+1 more)
Week 9/Day 1/on-prem-rag/: README.md  pyproject.toml  requirements.txt
Week 9/Day 1/on-prem-rag/app/: server.py
(+32 files in other folders)
