[tool.poetry]
package-mode = false
name = "on-prem-rag"
version = "0.1.0"
description = "A RAG application that runs on your local hardware"
authors = ["Mike Dean <miketraindoc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
langserve = "^0.3.0"
langchain = "^0.3.3"
langchain-community = "^0.3.2"
langchain-ollama = "^0.2.0"
langchain-qdrant = "^0.1.4"
langchain-core = "^0.3.10"
pymupdf = "^1.24.11"
qdrant-client = "^1.12.0"
sse-starlette = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
